third_party/move/move-compiler-v2/tests/checking/typing/recursive_local.exp

Diagnostics:
error: type unification cycle check failed (`?3 =?= (?3, integer)`, try to annotate type)
  ┌─ tests/checking/typing/recursive_local.move:5:9
  │
5 │         x = (x, 0);
  │         ^
